--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html,
 body {
     margin: 0;
     padding: 0;
+    background-color: rgb(208, 205, 205);
 }
 
 .main-header {
@@ -71,7 +72,7 @@ button {
     padding-right: 10px;
     height: 40px;
     border-radius: 10px;
-    color: white;
+    color: black;
     font-size: 22px;
     cursor: pointer;
     margin: 5px;
